--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
     <!-- /.hero -->
   </header>
   <!-- /.header -->
+
+<!-- Подключение виджета обратной связи через соцсети -->
+<script type="text/javascript" src="https://spikmi.com/Widget?Id=1969"></script>
 </body>
 </html>
