--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
         <div class="container">
           <div class="offer__block offer-block">
             <h2 class="offer__title">Оставьте заявку на расчет</h2>
-            <span class="offer__subtitle">и получите скидку на изготовление
-               скинали или фартука для кухни</span>
+            <span class="offer__subtitle">и получите скидку на изготовление скинали или фартука для кухни</span>
             <form action="#" class="form offer__form">
               <div class="form__row">
                 <div class="form__group">
