--- a/index.html
+++ b/index.html
@@ -122,6 +122,52 @@
         <!-- /.container -->
       </div>
       <!-- /.offer -->
+      <section class="features section">
+        <div class="container">
+          <h2 class="section-title section__title">Наши преимущества</h2>
+          <div class="features-block">
+            <div class="features-block__item">
+              <img src="img/features/feature.png" alt="Бесплатный дизайн-макет" class="features-block__image">
+              <p class="features-block__text">Бесплатный <br> дизайн-макет</p>
+              <!-- /.features-block__text -->
+            </div>
+            <!-- /.features-block__item -->
+            <div class="features-block__item">
+              <img src="img/features/feature.png" alt="Пожизненная гарантия" class="features-block__image">
+              <p class="features-block__text">Пожизненная <br> гарантия</p>
+              <!-- /.features-block__text -->
+            </div>
+            <!-- /.features-block__item -->
+            <div class="features-block__item">
+              <img src="img/features/feature.png" alt="Большой каталог мзображений" class="features-block__image">
+              <p class="features-block__text">Большой каталог <br> изображений</p>
+              <!-- /.features-block__text -->
+            </div>
+            <!-- /.features-block__item -->
+            <div class="features-block__item">
+              <img src="img/features/feature.png" alt="100% соблюдение сроков" class="features-block__image">
+              <p class="features-block__text">100% <br> соблюдение сроков</p>
+              <!-- /.features-block__text -->
+            </div>
+            <!-- /.features-block__item -->
+            <div class="features-block__item">
+              <img src="img/features/feature.png" alt="Собственное производство" class="features-block__image">
+              <p class="features-block__text">Собственное <br> производство</p>
+              <!-- /.features-block__text -->
+            </div>
+            <!-- /.features-block__item -->
+            <div class="features-block__item">
+              <img src="img/features/feature.png" alt="Минимальная цена в городе от 600 р.метр" class="features-block__image">
+              <p class="features-block__text">Минимальная цена в городе <br> <br> от 600 р.метр</p>
+              <!-- /.features-block__text -->
+            </div>
+            <!-- /.features-block__item -->
+          </div>
+          <!-- /.features-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.features section -->
     </section>
   </div>
   <!-- /.main -->
