--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
   <!-- /.header -->
 
   <div class="main">
-    <section>
       <div class="offer bg-secondary">
         <div class="container">
           <div class="offer__block offer-block">
@@ -168,7 +167,124 @@
         <!-- /.container -->
       </section>
       <!-- /.features section -->
-    </section>
+      <section class="section catalog">
+        <div class="container">
+          <h2 class="section-title section__title">Каталог скинали</h2>
+          <div class="catalog-block">
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/catalog-image-1.png" alt=""><span class="catalog-card__tag">Коллажи</span> <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like"><img src="img/like.png" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/catalog-image-2.png" alt=""><span class="catalog-card__tag">Авторская коллекция</span> <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like"><img src="img/like.png" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/catalog-image-3.png" alt=""><span class="catalog-card__tag">Коллажи</span> <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like"><img src="img/like.png" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/catalog-image-4.png" alt=""><span class="catalog-card__tag">Авторская коллекция</span> <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like"><img src="img/like.png" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/catalog-image-5.png" alt=""><span class="catalog-card__tag">Коллажи</span> <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like"><img src="img/like.png" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/catalog-image-6.png" alt=""><span class="catalog-card__tag">Абстракция</span> <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like"><img src="img/like.png" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+            <div class="catalog-card catalog__card">
+              <img src="img/catalog/catalog-image-7.png" alt=""><span class="catalog-card__tag">Коллажи</span> <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like"><img src="img/like.png" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+            <div class="catalog-card catalog__card">
+              <img src="img/catalog/catalog-image-8.png" alt=""><span class="catalog-card__tag">Абстракция</span> <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like"><img src="img/like.png" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+          </div>
+          <!-- /.catalog-block -->
+          <div class="catalog__link">
+            <a href="#" class="button catalog__link-more button_lg">Смотреть весь каталог скинали</a>
+            <span class="catalog__description">Более 3000 изображений скинали в 25 рубриках</span>
+          </div>
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section catalog -->
   </div>
   <!-- /.main -->
 
