--- a/index.html
+++ b/index.html
@@ -285,6 +285,56 @@
         <!-- /.container -->
       </section>
       <!-- /.section catalog -->
+      <section class="section blog">
+        <div class="container">
+          <div class="blog__heading">
+            <h3 class="blog__title">Полезное или что важно знать о скиналли...</h3>
+            <a href="#" class="blog__link-more">Читать все статьи</a>
+          </div>
+          <div class="blog-list">
+            <div class="blog-card blog-list_card">
+              <div class="blog-list__image">
+                <img src="img/blog-list/blog-post-1.png" alt="">
+              </div>
+              <!-- /.blog-list__image -->
+              <div class="blog-list__text">Виды стекла</div>
+              <!-- /.blog-list__text -->
+            </div>
+            <!-- /.blog-card blog-list_card -->
+            <div class="blog-card blog-list_card">
+              <div class="blog-list__image">
+                <img src="img/blog-list/blog-post-2.png" alt="">
+              </div>
+              <!-- /.blog-list__image -->
+              <div class="blog-list__text">Виды печати</div>
+              <!-- /.blog-list__text -->
+            </div>
+            <!-- /.blog-card blog-list_card -->
+            <div class="blog-card blog-list_card">
+              <div class="blog-list__image">
+                <img src="img/blog-list/blog-post-3.png" alt="">
+              </div>
+              <!-- /.blog-list__image -->
+              <div class="blog-list__text">Виды крепежа и монтажа</div>
+              <!-- /.blog-list__text -->
+            </div>
+            <!-- /.blog-card blog-list_card -->
+            <div class="blog-card blog-list_card">
+              <div class="blog-list__image">
+                <img src="img/blog-list/blog-post-4.png" alt="">
+              </div>
+              <!-- /.blog-list__image -->
+              <div class="blog-list__text">Вопросы и ответы</div>
+              <!-- /.blog-list__text -->
+            </div>
+            <!-- /.blog-card blog-list_card -->
+          </div>
+          <!-- /.blog-list -->
+          <!-- /.blog-list__heading -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section blog-list -->
   </div>
   <!-- /.main -->
 
