Сверстаны блок с отзывами без адаптива, форма обратной связи с адаптивом, пофиксили настройки формы, сверстан блок о производстве

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
   <!-- /.header -->
 
   <div class="main">
-      <div class="offer bg-secondary">
+      <section class="offer bg-secondary">
         <div class="container">
-          <div class="offer__block offer-block">
+          <div class="offer__block offer-block offer-block_calc-bg">
             <h2 class="offer__title">Оставьте заявку на расчет</h2>
             <span class="offer__subtitle">и получите скидку на изготовление скинали или фартука для кухни</span>
             <form action="#" class="form offer__form">
@@ -119,7 +119,7 @@
           <!-- /.offer__block offer-block -->
         </div>
         <!-- /.container -->
-      </div>
+      </section>
       <!-- /.offer -->
       <section class="features section">
         <div class="container">
@@ -542,6 +542,99 @@
         <!-- /.container -->
       </section>
       <!-- /.section steps -->
+      <section class="section reviews">
+        <div class="container">
+          <h2 class="section-title section__title">Отзывы наших клиентов</h2>
+          <!-- /.section__title -->
+          <div class="reviews-slider">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__text">Очень часто мы сталкиваемся с недопонианием со стороны сотрудников банка, и иной раз "навешают лапши на уши" и культурно пошлют...</div>
+              <!-- /.reviews-slider__text -->
+              <img src="img/reviews/review-1.png" alt="" class="reviews-slider__image">
+              <span class="reviews-slider__name">Екатерина Иванова Москва</span>
+              <!-- /.reviews-slider__name -->
+            </div>
+            <!-- /.reviews-slider__item -->
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__text">Очень часто мы сталкиваемся с недопонианием со стороны сотрудников банка, и иной раз
+                "навешают лапши на уши" и культурно пошлют...</div>
+              <!-- /.reviews-slider__text -->
+              <img src="img/reviews/review-2.png" alt="" class="reviews-slider__image">
+              <span class="reviews-slider__name">Екатерина Иванова Москва</span>
+              <!-- /.reviews-slider__name -->
+            </div>
+            <!-- /.reviews-slider__item -->
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__text">Очень часто мы сталкиваемся с недопонианием со стороны сотрудников банка, и иной раз
+                "навешают лапши на уши" и культурно пошлют...</div>
+              <!-- /.reviews-slider__text -->
+              <img src="img/reviews/review-3.png" alt="" class="reviews-slider__image">
+              <span class="reviews-slider__name">Екатерина Иванова Москва</span>
+              <!-- /.reviews-slider__name -->
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.reviews-slider -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section reviews -->
+      <section class="offer">
+        <div class="container">
+          <div class="offer__block offer-block offer-block_price-bg">
+            <h2 class="offer__title">Ищите где дешевле и лучше?</h2>
+            <span class="offer__subtitle">Если у Вас уже есть расчет от другой фирмы, но Вы хотите цену дешевле, укажите это и мы вам пересчитаем заказ с максимальной скидкой</span>
+            <form action="#" class="form offer__form">
+              <div class="form__row">
+                <div class="form__group">
+                  <input type="text" class="input form__input" placeholder="Ваше имя">
+                </div>
+                <div class="form__group">
+                  <input type="text" class="input form__input" placeholder="Ваш телефон">
+                </div>
+                <div class="form__group">
+                  <input type="text" class="input form__input" placeholder="Ваша цена">
+                </div>
+              </div>
+              <!-- /.form__row -->
+              <div class="form__row">
+                <div class="form__group">
+                  <input type="submit" class="button form__button" value="Получить расчет со скидкой">
+                </div>
+                <div class="form__group">
+                  <span class="form__policy">Ваши данные надежно защищены. Отправление заявки ни к чему не обязывает.</span>
+                </div>
+              </div>
+              <!-- /.form__row -->
+            </form>
+            <!-- /.form offer__form -->
+          </div>
+          <!-- /.offer__block offer-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.offer -->
+      <section class="section factory">
+        <div class="container">
+          <h2 class="section-title section__title">О производстве</h2>
+          <!-- /.section-title section__title -->
+          <div class="factory-block">
+            <div class="factory-block__image">
+              <img src="img/factory/factory-image.png" alt="">
+            </div>
+            <!-- /.factory-block__image -->
+            <div class="factory-block__text">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi, a ad quibusdam odit quasi fugit totam, debitis vero
+              molestiae quas, exercitationem nesciunt harum explicabo ut consequatur omnis possimus. Accusamus, dignissimos.</p>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi, a ad quibusdam odit quasi fugit totam, debitis vero molestiae quas, exercitationem nesciunt harum explicabo ut consequatur omnis possimus. Accusamus, dignissimos.</p>
+            </div>
+            <!-- /.factory-block__text -->
+          </div>
+          <!-- /.factory-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section factory -->
   </div>
   <!-- /.main -->
 
