--- a/index.html
+++ b/index.html
@@ -635,6 +635,45 @@
         <!-- /.container -->
       </section>
       <!-- /.section factory -->
+      <section class="section contacts">
+        <div class="container">
+          <h2 class="section-title section__title">Контакты</h2>
+          <!-- /.section-title section__title -->
+          <div class="contacts-block">
+            <div class="contacts-block__item">
+              <img src="img/contacts/contact-2.png" alt="" class="contacts__image">
+              <div class="contats__text">
+                <a href="#" class="contacts__link">+7 499 123-45-67</a>
+              </div>
+              <!-- /.contats__text -->
+            </div>
+            <!-- /.contacts-block__item -->
+            <div class="contacts-block__item">
+              <img src="img/contacts/contact-1.png" alt="" class="contacts__image">
+              <div class="contats__text">
+                <address class="contacts__addres">Каширское шоссе, д. 23, офис 345</address>
+              </div>
+              <!-- /.contats__text -->
+            </div>
+            <!-- /.contacts-block__item -->
+            <div class="contacts-block__item">
+              <img src="img/contacts/contact-3.png" alt="" class="contacts__image">
+              <div class="contats__text">
+                <a href="#" class="contacts__link">540177@mail.ru</a>
+              </div>
+              <!-- /.contats__text -->
+            </div>
+            <!-- /.contacts-block__item -->
+          </div>
+          <!-- /.contacts-bloc -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section contacts -->
+      <div class="map" id="map">
+        <script type="text/javascript" charset="utf-8" async
+          src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A198a90bb6cfcec6f9e5c555cded447838facee6b12845dff5a812cc990b55d40&amp;width=100%25&amp;height=410&amp;lang=ru_RU&amp;scroll=false"></script>
+      </div>
   </div>
   <!-- /.main -->
 
