--- a/index.html
+++ b/index.html
@@ -674,8 +674,60 @@
         <script type="text/javascript" charset="utf-8" async
           src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A198a90bb6cfcec6f9e5c555cded447838facee6b12845dff5a812cc990b55d40&amp;width=100%25&amp;height=410&amp;lang=ru_RU&amp;scroll=false"></script>
       </div>
+      <!-- /.map -->
+      <section class="section questions">
+        <div class="container">
+          <div class="questions-block">
+            <h3 class="questions-title questions__title">Остались вопросы?</h3>
+            <!-- /.questions-title questions__title -->
+            <a href="#" class="questions__link">Задайте их менеджеру</a>
+            <!-- /.questions__link -->
+          </div>
+          <!-- /.questions-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section questions -->
   </div>
   <!-- /.main -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-block">
+        <div class="footer__description">
+          <h4 class="footer__title footer-title">Фабрика скинали №1</h4>
+          <span class="footer__subtitle">ведущий производитель скинали</span>
+          <span class="footer__copy">@ Фабрика скинали #1</span>
+        </div>
+        <!-- /.footer__description -->
+        <div class="footer__pay-info">
+          <img src="img/footer/footer-1.png" alt="" class="footer__pay-logo">
+          <img src="img/footer/footer-2.png" alt="" class="footer__pay-logo">
+          <img src="img/footer/footer-3.png" alt="" class="footer__pay-logo">
+          <img src="img/footer/footer-4.png" alt="" class="footer__pay-logo">
+        </div>
+        <!-- /.footer__pay-info -->
+        <div class="footer__contacts">
+          <a href="#" class="footer__phone">+7 499 123-45-67</a>
+          <a href="" class="footer__mail">info@mail.ru</a>
+          <div class="footer-social">
+            <a href="#" class="footer-social__link">
+              <img src="img/footer/socials/social-1.png" alt="">
+            </a>
+            <a href="#" class="footer-social__link">
+              <img src="img/footer/socials/social-2.png" alt="">
+            </a>
+            <a href="#" class="footer-social__link">
+              <img src="img/footer/socials/social-3.png" alt="">
+            </a>
+          </div>
+        </div>
+        <!-- /.footer__contacts -->
+      </div>
+      <!-- /.footer-block -->
+    </div>
+    <!-- /.container -->
+  </footer>
+  <!-- /.footer -->
 
 <!-- Подключение виджета обратной связи через соцсети -->
 <script type="text/javascript" src="https://spikmi.com/Widget?Id=1969"></script>
