--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@
               <div class="form__row">
                 <div class="form__group">
                   <label for="" class="form__label">Вид стекла</label>
-                  <input type="text" class="input form__input">
+                  <input type="hidden" name="type" id="select-type" value="С печатью">
+                  <div class="select form__select">
+                    <div class="select_checked">С печатью</div>
+                    <ul class="select__dropdown">
+                      <li class="select__option" data-value="С печатью">С печатю</li>
+                      <li class="select__option" data-value="Без печати">Без печати</li>
+                    </ul>
+                  </div>
+                  <!-- /.select form__select -->
                 </div>
                 <div class="form__group">
                   <label for="" class="form__label">Ширина, см</label>
@@ -781,20 +789,7 @@
 <script src="js/jquery.event.move.js"></script>
 <script src="js/jquery.twentytwenty.js"></script>
 <script src="js/slick.min.js"></script>
-<script>
-  $(window).load(function () {
-    $(".before-after").twentytwenty({
-      before_label: 'Без скинали', // Set a custom before label
-      after_label: 'Со скинали' // Set a custom after label
-    });
-    $('.before-slider').slick({
-      draggable: false,
-      dots: true,
-      dotsClass: 'before-slider__dots',
-      prevArrow: $('.arrow-left'),
-      nextArrow: $('.arrow-right')
-    })
-  });
+<script src="js/main.js"></script>
 </script>
 </body>
 </html>
