--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="menu">
       <div class="container">
         <nav class="menu__nav">
-          <a href="#" class="menu__link">Главная</a>
-          <a href="#" class="menu__link">Продукция</a>
-          <a href="#" class="menu__link">Каталог</a>
-          <a href="#" class="menu__link">Пример работ</a>
-          <a href="#" class="menu__link">Примерка изображений</a>
-          <a href="#" class="menu__link">Стоимость дилерам</a>
-          <a href="#" class="menu__link">О скинали</a>
+          <a href="#hero" class="menu__link">Главная</a>
+          <a href="#features" class="menu__link">Преимущества</a>
+          <a href="#catalog" class="menu__link">Каталог</a>
+          <a href="#reviews" class="menu__link">Пример работ</a>
+          <a href="#before" class="menu__link">Примерка изображений</a>
+          <a href="#price" class="menu__link">Стоимость дилерам</a>
+          <a href="#blog" class="menu__link">О скинали</a>
         </nav>
       </div>
     </div>
@@ -47,14 +47,14 @@
             <a href="mailto:info@mail.ru" class="navbar__email navbar__small-text">info@mail.ru</a>
           </div>
           <!-- /.logo navbar__landline -->
-          <button class="button-o navbar__button">Получить консультацию</button>
+          <a href="#offer" class="button-o navbar__button">Получить консультацию</a>
         </div>
         <!-- /.navbar-wrap -->
       </div>
       <!-- /.container -->
     </div>
     <!-- /.navbar -->
-    <div class="hero">
+    <div class="hero" id="hero">
       <div class="container">
         <h1 class="hero__title">Гарантия <br> минимальной цены <br> на скинали</h1>
         <span class="hero__subtitle">от 3 000 р/м2</span>
@@ -66,7 +66,7 @@
   <!-- /.header -->
 
   <div class="main">
-      <section class="offer bg-secondary">
+      <section class="offer bg-secondary" id="offer">
         <div class="container">
           <div class="offer__block offer-block offer-block_calc-bg">
             <h2 class="offer__title">Оставьте заявку на расчет</h2>
@@ -87,11 +87,11 @@
                 </div>
                 <div class="form__group">
                   <label for="" class="form__label">Ширина, см</label>
-                  <input type="text" class="input form__input">
+                  <input type="number" class="input form__input">
                 </div>
                 <div class="form__group">
                   <label for="" class="form__label">Высота, см</label>
-                  <input type="text" class="input form__input">
+                  <input type="number" class="input form__input">
                 </div>
               </div>
               <!-- /.form__row -->
@@ -130,7 +130,7 @@
         <!-- /.container -->
       </section>
       <!-- /.offer -->
-      <section class="features section">
+      <section class="features section" id="features">
         <div class="container">
           <h2 class="section-title section__title">Наши преимущества</h2>
           <div class="features-block">
@@ -176,7 +176,7 @@
         <!-- /.container -->
       </section>
       <!-- /.features section -->
-      <section class="section catalog">
+      <section class="section catalog" id="catalog">
         <div class="container">
           <h2 class="section-title section__title">Каталог скинали</h2>
           <div class="catalog-block">
@@ -294,7 +294,7 @@
         <!-- /.container -->
       </section>
       <!-- /.section catalog -->
-      <section class="section blog">
+      <section class="section blog" id="blog">
         <div class="container">
           <div class="blog__heading">
             <h3 class="blog__title">Полезное или что важно знать о скиналли...</h3>
@@ -345,7 +345,7 @@
       </section>
       <!-- /.section blog-list -->
 
-      <section class="section price">
+      <section class="section price" id="price">
         <div class="container">
           <h2 class="section-title section__title">Цены и виды скинали</h2>
           <!-- /.section-title section__title -->
@@ -552,7 +552,7 @@
       </section>
       <!-- /.section steps -->
 
-      <section class="section before">
+      <section class="section before" id="before">
         <div class="container">
           <h2 class="section-title section__title">До и после</h2>
           <div class="before-slider-wrap">
@@ -596,7 +596,7 @@
       </section>
       <!-- /.section before -->
 
-      <section class="section reviews">
+      <section class="section reviews" id="reviews">
         <div class="container">
           <h2 class="section-title section__title">Отзывы наших клиентов</h2>
           <!-- /.section__title -->
@@ -644,7 +644,7 @@
                   <input type="text" class="input form__input" placeholder="Ваше имя">
                 </div>
                 <div class="form__group">
-                  <input type="text" class="input form__input" placeholder="Ваш телефон">
+                  <input type="tel" class="input form__input" placeholder="Ваш телефон">
                 </div>
                 <div class="form__group">
                   <input type="text" class="input form__input" placeholder="Ваша цена">
@@ -790,6 +790,7 @@
 <script src="js/jquery.twentytwenty.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/jquery.maskedinput.min.js"></script>
 </script>
 </body>
 </html>
