--- a/index.html
+++ b/index.html
@@ -135,37 +135,37 @@
           <h2 class="section-title section__title">Наши преимущества</h2>
           <div class="features-block">
             <div class="features-block__item">
-              <img src="img/features/feature.png" alt="Бесплатный дизайн-макет" class="features-block__image">
+              <img src="img/features/1.svg" alt="Бесплатный дизайн-макет" class="features-block__image">
               <p class="features-block__text">Бесплатный <br> дизайн-макет</p>
               <!-- /.features-block__text -->
             </div>
             <!-- /.features-block__item -->
             <div class="features-block__item">
-              <img src="img/features/feature.png" alt="Пожизненная гарантия" class="features-block__image">
+              <img src="img/features/2.svg" alt="Пожизненная гарантия" class="features-block__image">
               <p class="features-block__text">Пожизненная <br> гарантия</p>
               <!-- /.features-block__text -->
             </div>
             <!-- /.features-block__item -->
             <div class="features-block__item">
-              <img src="img/features/feature.png" alt="Большой каталог мзображений" class="features-block__image">
+              <img src="img/features/3.svg" alt="Большой каталог мзображений" class="features-block__image">
               <p class="features-block__text">Большой каталог <br> изображений</p>
               <!-- /.features-block__text -->
             </div>
             <!-- /.features-block__item -->
             <div class="features-block__item">
-              <img src="img/features/feature.png" alt="100% соблюдение сроков" class="features-block__image">
+              <img src="img/features/4.svg" alt="100% соблюдение сроков" class="features-block__image">
               <p class="features-block__text">100% <br> соблюдение сроков</p>
               <!-- /.features-block__text -->
             </div>
             <!-- /.features-block__item -->
             <div class="features-block__item">
-              <img src="img/features/feature.png" alt="Собственное производство" class="features-block__image">
+              <img src="img/features/5.svg" alt="Собственное производство" class="features-block__image">
               <p class="features-block__text">Собственное <br> производство</p>
               <!-- /.features-block__text -->
             </div>
             <!-- /.features-block__item -->
             <div class="features-block__item">
-              <img src="img/features/feature.png" alt="Минимальная цена в городе от 600 р.метр" class="features-block__image">
+              <img src="img/features/6.svg" alt="Минимальная цена в городе от 600 р.метр" class="features-block__image">
               <p class="features-block__text">Минимальная цена в городе <br> <br> от 600 р.метр</p>
               <!-- /.features-block__text -->
             </div>
@@ -498,7 +498,7 @@
           <!-- /.section__title -->
           <div class="steps-block">
             <div class="step">
-              <img src="img/steps/step-1.png" alt="" class="step__img">
+              <img src="img/steps/1.svg" alt="" class="step__img">
               <h4 class="step__title">Заявка</h4>
               <!-- /.step__title -->
               <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
@@ -506,7 +506,7 @@
             </div>
             <!-- /.step -->
             <div class="step">
-              <img src="img/steps/step-2.png" alt="" class="step__img">
+              <img src="img/steps/2.svg" alt="" class="step__img">
               <h4 class="step__title">Замер</h4>
               <!-- /.step__title -->
               <p class="step__text">Вы производите замер сами или наш специалист выезжает к вам</p>
@@ -514,7 +514,7 @@
             </div>
             <!-- /.step -->
             <div class="step">
-              <img src="img/steps/step-3.png" alt="" class="step__img">
+              <img src="img/steps/3.svg" alt="" class="step__img">
               <h4 class="step__title">Договор</h4>
               <!-- /.step__title -->
               <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
@@ -522,7 +522,7 @@
             </div>
             <!-- /.step -->
             <div class="step">
-              <img src="img/steps/step-4.png" alt="" class="step__img">
+              <img src="img/steps/4.svg" alt="" class="step__img">
               <h4 class="step__title">Дизайн</h4>
               <!-- /.step__title -->
               <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
@@ -530,7 +530,7 @@
             </div>
             <!-- /.step -->
             <div class="step">
-              <img src="img/steps/step-5.png" alt="" class="step__img">
+              <img src="img/steps/5.svg" alt="" class="step__img">
               <h4 class="step__title">Производство</h4>
               <!-- /.step__title -->
               <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
@@ -538,7 +538,7 @@
             </div>
             <!-- /.step -->
             <div class="step">
-              <img src="img/steps/step-6.png" alt="" class="step__img">
+              <img src="img/steps/6.svg" alt="" class="step__img">
               <h4 class="step__title">Монтаж</h4>
               <!-- /.step__title -->
               <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
@@ -695,7 +695,7 @@
           <!-- /.section-title section__title -->
           <div class="contacts-block">
             <div class="contacts-block__item">
-              <img src="img/contacts/contact-2.png" alt="" class="contacts__image">
+              <img src="img/contacts/phone.svg" alt="" class="contacts__image">
               <div class="contats__text">
                 <a href="#" class="contacts__link">+7 499 123-45-67</a>
               </div>
@@ -703,7 +703,7 @@
             </div>
             <!-- /.contacts-block__item -->
             <div class="contacts-block__item">
-              <img src="img/contacts/contact-1.png" alt="" class="contacts__image">
+              <img src="img/contacts/location.svg" alt="" class="contacts__image">
               <div class="contats__text">
                 <address class="contacts__addres">Каширское шоссе, д. 23, офис 345</address>
               </div>
@@ -711,7 +711,7 @@
             </div>
             <!-- /.contacts-block__item -->
             <div class="contacts-block__item">
-              <img src="img/contacts/contact-3.png" alt="" class="contacts__image">
+              <img src="img/contacts/email.svg" alt="" class="contacts__image">
               <div class="contats__text">
                 <a href="#" class="contacts__link">540177@mail.ru</a>
               </div>
@@ -754,10 +754,10 @@
         </div>
         <!-- /.footer__description -->
         <div class="footer__pay-info">
-          <img src="img/footer/footer-1.png" alt="" class="footer__pay-logo">
-          <img src="img/footer/footer-2.png" alt="" class="footer__pay-logo">
-          <img src="img/footer/footer-3.png" alt="" class="footer__pay-logo">
-          <img src="img/footer/footer-4.png" alt="" class="footer__pay-logo">
+          <img src="img/footer/webmoney.svg" alt="" class="footer__pay-logo">
+          <img src="img/footer/yandexmoney.svg" alt="" class="footer__pay-logo">
+          <img src="img/footer/visa.svg" alt="" class="footer__pay-logo">
+          <img src="img/footer/mastercard.svg" alt="" class="footer__pay-logo">
         </div>
         <!-- /.footer__pay-info -->
         <div class="footer__contacts">
@@ -765,13 +765,13 @@
           <a href="" class="footer__mail">info@mail.ru</a>
           <div class="footer-social">
             <a href="#" class="footer-social__link">
-              <img src="img/footer/socials/social-1.png" alt="">
+              <img src="img/footer/socials/vk.svg" alt="">
             </a>
             <a href="#" class="footer-social__link">
-              <img src="img/footer/socials/social-2.png" alt="">
+              <img src="img/footer/socials/twitter.svg" alt="">
             </a>
             <a href="#" class="footer-social__link">
-              <img src="img/footer/socials/social-3.png" alt="">
+              <img src="img/footer/socials/instagram.svg" alt="">
             </a>
           </div>
         </div>
